Fix: about page was not showing

--- a/public/css/about.less
+++ b/public/css/about.less
@@ -5,6 +5,8 @@
     color:@dark;
     background:rgba(255,255,255,0.95);
     z-index:4;
+    top:0;
+    left:0;
 
     button.ic-close-window {
         color:@dark;
